# sdk

./: .dockerignore  .gitattributes  .gitignore  CONTRIBUTING.md  Dockerfile  Makefile  README.md  build.sh  generate.sh  go.mod  go.sum  package-lock.json  package.json  pom.xml  release.sh
clients/client/rust/: Cargo.toml  README.md
clients/client/rust/.openapi-generator/: FILES
clients/client/rust/docs/: AcceptDeviceUserCodeRequest.md  AcceptLoginRequest.md  AcceptOAuth2ConsentRequest.md  AcceptOAuth2ConsentRequestSession.md  AcceptOAuth2LoginRequest.md  AccountExperienceColors.md  AccountExperienceConfiguration.md  AccountExperienceThemeVariables.md  ActiveProject.md  ActiveProjectInConsole.md  AddProjectToWorkspaceBody.md  AdminApi.md  AdminCreateIdentityBody.md  AdminCreateIdentityImportCredentialsOidc.md  AdminCreateIdentityImportCredentialsOidcProvider.md  AdminCreateJsonWebKeySetBody.md  AdminCreateSelfServiceRecoveryCodeBody.md  AdminCreateSelfServiceRecoveryLinkBody.md  AdminIdentityImportCredentialsLookupSecret.md  AdminIdentityImportCredentialsLookupSecretConfig.md  AdminRevokeApiKeyBody.md  AdminRevokeImportedApiKeyBody.md  AdminRevokeIssuedApiKeyBody.md  AdminRotateIssuedApiKeyBody.md  AdminTrustOAuth2JwtGrantIssuerBody.md  AdminUpdateIdentityBody.md  AdminUpdateImportedApiKeyRequest.md  AdminUpdateIssuedApiKeyRequest.md  Any.md  ApiKeysApi.md  ApiToken.md  Attribute.md  AttributeFilter.md  AttributesCountDatapoint.md  AuthenticateOkBody.md  AuthenticatorAssuranceLevel.md  BasicOrganization.md  BatchCheckPermissionBody.md  BatchCheckPermissionResult.md  BatchCreateImportedApiKeysErrorCode.md  (+505 more)
clients/client/rust/src/: lib.rs
clients/hydra/rust/: Cargo.toml  README.md
clients/hydra/rust/.openapi-generator/: FILES
clients/hydra/rust/docs/: AcceptConsentRequest.md  AcceptLoginRequest.md  AcceptOAuth2ConsentRequest.md  AcceptOAuth2LoginRequest.md  AdminApi.md  CompletedRequest.md  ConsentRequest.md  ConsentRequestSession.md  ContainerWaitOkBodyError.md  CreateJsonWebKeySet.md  CreateVerifiableCredentialRequestBody.md  CredentialSupportedDraft00.md  ErrorOAuth2.md  GenericError.md  GetVersion200Response.md  HealthNotReadyStatus.md  HealthStatus.md  InlineResponse200.md  InlineResponse2001.md  InlineResponse503.md  IntrospectedOAuth2Token.md  IsReady200Response.md  IsReady503Response.md  JsonError.md  JsonWebKey.md  JsonWebKeySet.md  JsonWebKeySetGeneratorRequest.md  JwkApi.md  KeysetPaginationRequestParameters.md  KeysetPaginationResponseHeaders.md  LoginRequest.md  LogoutRequest.md  MetadataApi.md  OAuth2Api.md  OAuth2Client.md  OAuth2ClientTokenLifespans.md  OAuth2ConsentRequest.md  OAuth2ConsentRequestOpenIdConnectContext.md  OAuth2ConsentSession.md  OAuth2LoginRequest.md  (+37 more)
clients/keto/rust/: Cargo.toml  README.md
clients/keto/rust/.openapi-generator/: FILES
clients/keto/rust/docs/: AddOryAccessControlPolicyRoleMembersBody.md  AuthorizationResult.md  CheckOplSyntaxResult.md  CheckPermissionResult.md  CheckPermissionResultWithError.md  CreateRelationTupleBadRequestBody.md  CreateRelationTupleInternalServerErrorBody.md  CreateRelationshipBody.md  DeleteRelationTuplesBadRequestBody.md  DeleteRelationTuplesInternalServerErrorBody.md  EnginesApi.md  ErrorGeneric.md  ExpandTree.md  ExpandedPermissionTree.md  GenericError.md  GetCheckBadRequestBody.md  GetCheckInternalServerErrorBody.md  GetExpandBadRequestBody.md  GetExpandInternalServerErrorBody.md  GetExpandNotFoundBody.md  GetRelationTuplesInternalServerErrorBody.md  GetRelationTuplesNotFoundBody.md  GetRelationTuplesResponse.md  GetVersion200Response.md  HealthApi.md  InlineResponse2001.md  InlineResponse400.md  InlineResponse503.md  InternalRelationTuple.md  IsInstanceAliveInternalServerErrorBody.md  IsReady503Response.md  MetadataApi.md  OryAccessControlPolicy.md  OryAccessControlPolicyAllowedInput.md  OryAccessControlPolicyRole.md  ParseError.md  PatchDelta.md  PatchRelationTuplesBadRequestBody.md  PatchRelationTuplesInternalServerErrorBody.md  PatchRelationTuplesNotFoundBody.md  (+13 more)
clients/kratos/rust/: Cargo.toml  README.md
clients/kratos/rust/.openapi-generator/: FILES
clients/kratos/rust/docs/: AdminApi.md  AdminCreateIdentityImportCredentialsOidcConfig.md  AdminCreateIdentityImportCredentialsPassword.md  AdminCreateIdentityImportCredentialsPasswordConfig.md  AdminIdentityImportCredentials.md  AdminUpdateIdentityBody.md  CompleteSelfServiceLoginFlowWithPasswordMethod.md  CompleteSelfServiceRecoveryFlowWithLinkMethod.md  CompleteSelfServiceSettingsFlowWithPasswordMethod.md  CompleteSelfServiceVerificationFlowWithLinkMethod.md  ConsistencyRequestParameters.md  ContainerChangeResponseItem.md  ContainerUpdateOkBody.md  ContainerWaitOkBody.md  ContinueWithRecoveryUi.md  ContinueWithRecoveryUiFlow.md  ContinueWithSetOrySessionToken.md  ContinueWithSettingsUi.md  ContinueWithSettingsUiFlow.md  ContinueWithVerificationUi.md  ContinueWithVerificationUiFlow.md  CourierApi.md  CourierMessageType.md  CreateFedcmFlowResponse.md  CreateIdentity.md  CreateIdentityBody.md  CreateRecoveryCodeForIdentityBody.md  CreateRecoveryLinkForIdentityBody.md  DeleteMySessionsCount.md  ErrorAuthenticatorAssuranceLevelNotSatisfied.md  ErrorBrowserLocationChangeRequired.md  ErrorContainer.md  ErrorFlowReplaced.md  ErrorGeneric.md  FlowError.md  FormField.md  FrontendApi.md  GenericError.md  GenericErrorPayload.md  GetVersion200Response.md  (+133 more)
clients/oathkeeper/rust/: Cargo.toml  README.md
clients/oathkeeper/rust/.openapi-generator/: FILES
clients/oathkeeper/rust/docs/: ApiApi.md  CreateRuleCreated.md  CreateRuleForbidden.md  CreateRuleForbiddenBody.md  CreateRuleInternalServerError.md  CreateRuleInternalServerErrorBody.md  CreateRuleUnauthorized.md  CreateRuleUnauthorizedBody.md  DecisionsForbidden.md  DecisionsForbiddenBody.md  DecisionsInternalServerError.md  DecisionsInternalServerErrorBody.md  DecisionsNotFound.md  DecisionsNotFoundBody.md  DecisionsUnauthorized.md  DecisionsUnauthorizedBody.md  DeleteRuleForbidden.md  DeleteRuleForbiddenBody.md  DeleteRuleInternalServerError.md  DeleteRuleInternalServerErrorBody.md  (+76 more)
(+34706 files in other folders)
