[package]
name = "ory-client"
version = "1.17.2"
authors = ["support@ory.sh"]
description = "OpenAPI API client for Ory Network, Ory's web-scale API for identity and access control."
license = "Apache-2.0"
edition = "2021"

[features]
default = ["reqwest"]
rustls = ["reqwest_rustls"]

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
url = "^2.5"
uuid = { version = "^1.8", features = ["serde", "v4"] }
reqwest = { version = "^0.12", features = ["json", "multipart"], optional = true }
reqwest_rustls = { package = "reqwest", version = "^0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "brotli", "gzip"], optional = true }
