[package]
name = "ory-keto-client"
version = "0.7.0-alpha.0"
description = "SDK Client for Ory Keto"
documentation = "https://www.ory.sh/keto/docs/sdk"
homepage = "https://www.ory.sh"
license = "Apache-2.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
