[package]
name = "ory-keto-client"
version = "25.4.0"
authors = ["hi@ory.sh"]
description = "OpenAPI API client for Ory Keto, Ory's open source 'Zanzibar - Google's Consistent, Global Authorization System' implementation."
license = "Apache-2.0"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }
