[package]
name = "ory-oathkeeper-client"
version = "0.0.0-alpha.54"
description = "SDK Client for Ory Oathkeeper"
documentation = "https://www.ory.sh/oathkeeper/docs/sdk"
homepage = "https://www.ory.sh"
license = "Apache-2.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart"]

[dev-dependencies]
